# arquiteturaDeSoftware

./: README.md  integrantes.txt
barramento/: README.md  pyproject.toml
barramento/core/: adapter.py
barramento/web/: controllers.py  routes.py  wsgi.py
comerciantes/: .factorypath  .project  HELP.md  README.md  pom.xml
comerciantes/.metadata/: version.ini
comerciantes/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
comerciantes/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
comerciantes/.metadata/.plugins/org.eclipse.pde.core/.cache/: clean-cache.properties
comerciantes/.metadata/.plugins/org.eclipse.tm.terminal.view.ui/.executables/: data.properties
comerciantes/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
comerciantes/.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
comerciantes/.metadata/.plugins/org.springsource.ide.eclipse.dashboard.ui/feeds/dashboard.feeds.blogs/: -549550714.xml
comerciantes/src/main/java/com/maua/exponegocios/: ComerciantesApplication.java
comerciantes/src/main/java/com/maua/exponegocios/dto/: ComercianteDTO.java  (+2 more)
comerciantes/src/main/resources/: schema.sql
comerciantes/src/test/java/com/maua/exponegocios/: ComerciantesApplicationTests.java
consumidor/: README.md  index.js  package-lock.json  package.json
consumidor/config/: auth.js
consumidor/entity/: Usuario.js  sequelize-config.js
relatorio/: .gitignore  README.md  pom.xml
relatorio/src/main/resources/: application.properties  data.sql  schema.sql
(+12 files in other folders)
