[tool.poetry]
name = "barramento"
version = "0.1.0"
description = "barramento de eventos do projeto de gerenciamentod e links"
authors = ["Leonardo R. 18.02401-7"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
jwt = "^1.2.0"
requests = "^2.25.1"
backoff = "^1.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
